refactor(compiler): Remove defaultSource fallback from Pass 6
After materializeDefaultSources() runs in pass 0, all inputs should
have wires from hidden provider blocks. The special-case fallback to
defaultSource metadata is no longer needed and has been removed.

Changes:
- Remove lines 310-319 (defaultSource fallback logic)
- Remove import of materializeDefaultSource helper
- Update error message to indicate internal compiler error
- All inputs should have wires after pass 0 materialization

Sprint 2: Phase 0 Architecture Refactoring - Unify Default Sources

--- a/.agent_planning/multi-input-blocks/DOD-2025-12-31-193737.md
+++ b/.agent_planning/multi-input-blocks/DOD-2025-12-31-193737.md
@@ -3,7 +3,8 @@
 **Generated**: 2025-12-31-193737
 **Plan**: PLAN-2025-12-31-193737.md
 **Sprint**: Phase 0 - Sprint 3: Multi-Input Blocks with Combine Modes
-**Feature Flag**: VITE_ENABLE_MULTI_INPUT
+**Feature Flag**: NONE (shipping directly)
+**User Decision**: Approved without feature flag (2025-12-31)
 
 ---
 
@@ -17,22 +18,13 @@
 - [ ] Type exports updated if necessary
 - [ ] TypeScript compilation succeeds with no errors
 
-### P1: Feature Flag for Multi-Input Support
+### P1: Remove Single-Input Invariant
 
-- [ ] Environment variable `VITE_ENABLE_MULTI_INPUT` defined (defaults to 'false')
-- [ ] PatchStore.connect() conditionally calls disconnectInputPort based on flag
-- [ ] BusStore.addListener() conditionally calls disconnectInputPort based on flag
-- [ ] Flag documented in .env.example or equivalent config file
-- [ ] All existing tests pass with flag OFF (backward compatibility verified)
-- [ ] Manual test confirms multi-input allowed with flag ON
-
-### P1: Conditionally Remove Single-Input Invariant
-
-- [ ] PatchStore.connect() conditionally skips disconnectInputPort when flag ON
-- [ ] BusStore.addListener() conditionally skips disconnectInputPort when flag ON
+- [ ] PatchStore.connect() no longer calls disconnectInputPort
+- [ ] BusStore.addListener() no longer calls disconnectInputPort
 - [ ] disconnectInputPort logic unchanged (still used for explicit disconnects)
-- [ ] Unit tests verify: (a) flag OFF = old behavior, (b) flag ON = multi-input allowed
-- [ ] Integration test confirms multiple edges to same input when flag ON
+- [ ] Unit tests verify multiple edges can connect to same input
+- [ ] Integration test confirms multiple edges to same input work correctly
 - [ ] No edge cases cause errors (e.g., duplicate edges, self-loops)
 
 ### P2: Extract Combine Logic from Pass 7
@@ -73,10 +65,9 @@
 - [ ] combineMode optional (backward compatibility)
 - [ ] combineMode ignored on output slots (no effect)
 
-### Feature Flag Tests
-- [ ] Flag OFF: single-input invariant enforced (existing behavior)
-- [ ] Flag ON: multiple edges allowed to same input
-- [ ] Flag toggle doesn't break existing patches
+### Multi-Input Invariant Tests
+- [ ] Multiple edges allowed to same input
+- [ ] Existing patches continue to work (backward compatible)
 
 ### Combine Validation Tests
 - [ ] All valid world/domain combinations pass validation
@@ -134,11 +125,10 @@
 
 This sprint delivers:
 1. **Slot interface extension**: combineMode field added
-2. **Feature flag**: VITE_ENABLE_MULTI_INPUT for safe rollout
-3. **Multi-input support**: Multiple edges to same input allowed (behind flag)
-4. **Combine logic**: Extracted from Pass 7, reusable for Pass 6
-5. **Pass 6 updates**: Handles N=0, N=1, N>1 edge cases
-6. **Validation**: combineMode validated against world/domain
+2. **Multi-input support**: Multiple edges to same input allowed (permanent change)
+3. **Combine logic**: Extracted from Pass 7, reusable for Pass 6
+4. **Pass 6 updates**: Handles N=0, N=1, N>1 edge cases
+5. **Validation**: combineMode validated against world/domain
 
 Deferred to future sprints:
 - UI updates (Inspector multi-edge visualization + combine mode selector)
@@ -193,7 +183,7 @@ Deferred to future sprints:
 
 ## Manual Smoke Test Checklist
 
-**With VITE_ENABLE_MULTI_INPUT=true**:
+**Multi-Input Block Test**:
 - [ ] Create patch with BlockA, BlockB, BlockC
 - [ ] Connect BlockA.out → BlockB.in (wire 1)
 - [ ] Connect BlockC.out → BlockB.in (wire 2)
@@ -202,13 +192,10 @@ Deferred to future sprints:
 - [ ] Compile patch → verify combine node in IR
 - [ ] Run patch → verify output = A + C
 
-**With VITE_ENABLE_MULTI_INPUT=false**:
-- [ ] Create same patch as above
-- [ ] Connect BlockA.out → BlockB.in (wire 1)
-- [ ] Connect BlockC.out → BlockB.in (wire 2)
-- [ ] Verify wire 1 replaced by wire 2 (old single-input behavior)
-- [ ] Compile patch → verify no combine node
-- [ ] Run patch → verify output = C only
+**Single-Input Backward Compatibility**:
+- [ ] Load existing patch with single-input blocks
+- [ ] Verify it compiles and runs correctly
+- [ ] Verify N=1 case has no combine overhead
 
 ---
 
