--- a/.agent_planning/multi-input-blocks/PLAN-2025-12-31-193737.md
+++ b/.agent_planning/multi-input-blocks/PLAN-2025-12-31-193737.md
@@ -3,9 +3,10 @@
 **Generated**: 2025-12-31-193737
 **Source STATUS**: STATUS-2025-12-31-193238.md
 **Sprint**: Phase 0 - Sprint 3: Multi-Input Blocks with Combine Modes
-**Feature Flag**: VITE_ENABLE_MULTI_INPUT
-**Effort Estimate**: 2-3 days (14-22 hours)
+**Feature Flag**: NONE (shipping directly)
+**Effort Estimate**: 2-3 days (12-18 hours)
 **Dependencies**: Edge Unification Sprint 1 (4 work items remaining)
+**User Decision**: Approved without feature flag (2025-12-31)
 
 ---
 
@@ -90,70 +91,16 @@ export type BusCombineMode = 'sum' | 'average' | 'max' | 'min' | 'last' | 'layer
 
 ---
 
-### P1: Feature Flag for Multi-Input Support
-
-**Status**: Not Started
-**Effort**: Small (1-2 hours)
-**Dependencies**: None
-**Spec Reference**: ARCHITECTURE-PROPOSAL.md lines 80-85 • **STATUS Reference**: STATUS-2025-12-31-193238.md § "Minimal Implementation Path" lines 241-256
-
-#### Description
-
-Add environment variable `VITE_ENABLE_MULTI_INPUT` to control multi-input block behavior. When `false` (default), preserve existing single-input invariant. When `true`, allow multiple edges to same input port.
-
-This feature flag enables safe incremental rollout and allows reverting to old behavior if issues arise.
-
-**Current Evidence** (STATUS lines 78-103):
-- Single-input invariant enforced at PatchStore.ts:905-907
-- Same invariant enforced at BusStore.ts:346-348
-- `disconnectInputPort` implementation at PatchStore.ts:853-865
-
-#### Acceptance Criteria (REQUIRED)
-
-- [ ] Environment variable `VITE_ENABLE_MULTI_INPUT` defined (defaults to 'false')
-- [ ] PatchStore.connect() conditionally calls disconnectInputPort based on flag
-- [ ] BusStore.addListener() conditionally calls disconnectInputPort based on flag
-- [ ] Flag documented in .env.example or equivalent config file
-- [ ] All existing tests pass with flag OFF (backward compatibility verified)
-- [ ] Manual test confirms multi-input allowed with flag ON
-
-#### Technical Notes
-
-**Implementation pattern**:
-```typescript
-const ENABLE_MULTI_INPUT = import.meta.env.VITE_ENABLE_MULTI_INPUT === 'true';
-
-connect(from: Endpoint, to: Endpoint) {
-  if (!ENABLE_MULTI_INPUT) {
-    // Old behavior: enforce single-input invariant
-    this.disconnectInputPort(to.blockId, to.slotId);
-  }
-  // ... rest of connect logic
-}
-```
-
-**Files to modify**:
-- `src/editor/stores/PatchStore.ts` (connect method)
-- `src/editor/stores/BusStore.ts` (addListener method)
-- `.env.example` (document flag)
-
-**Migration safety**:
-- Single-input is a subset of multi-input (zero breaking changes)
-- Existing patches work unchanged
-- Flag can be flipped at runtime (browser reload)
-
----
-
-### P1: Conditionally Remove Single-Input Invariant
+### P1: Remove Single-Input Invariant
 
 **Status**: Not Started
 **Effort**: Small (2-3 hours)
-**Dependencies**: P1: Feature Flag for Multi-Input Support
+**Dependencies**: None
 **Spec Reference**: ARCHITECTURE-PROPOSAL.md lines 23-25 • **STATUS Reference**: STATUS-2025-12-31-193238.md § "Single-Input Invariant" lines 78-103
 
 #### Description
 
-Modify PatchStore.connect() and BusStore.addListener() to conditionally skip the `disconnectInputPort` call when `VITE_ENABLE_MULTI_INPUT=true`. This removes the architectural constraint that an input can have only one source.
+Remove the single-input invariant from PatchStore.connect() and BusStore.addListener() by removing the `disconnectInputPort` call. This enables multiple edges to the same input port permanently (no feature flag).
 
 **Current Evidence** (STATUS lines 78-103):
 - PatchStore.ts:905-907: Wire connections enforce 1:1
@@ -161,17 +108,17 @@ Modify PatchStore.connect() and BusStore.addListener() to conditionally skip the
 - PatchStore.ts:853-865: disconnectInputPort removes ALL wires + bus listeners
 
 **Impact**:
-- When flag ON: Multiple edges allowed to same input
-- When flag OFF: Single-input invariant preserved (backward compat)
+- Multiple edges now allowed to same input (permanent change)
+- Existing patches continue to work (single-input is subset of multi-input)
 - No UI changes needed initially (Inspector will show multiple edges)
 
 #### Acceptance Criteria (REQUIRED)
 
-- [ ] PatchStore.connect() conditionally skips disconnectInputPort when flag ON
-- [ ] BusStore.addListener() conditionally skips disconnectInputPort when flag ON
+- [ ] PatchStore.connect() no longer calls disconnectInputPort
+- [ ] BusStore.addListener() no longer calls disconnectInputPort
 - [ ] disconnectInputPort logic unchanged (still used for explicit disconnects)
-- [ ] Unit tests verify: (a) flag OFF = old behavior, (b) flag ON = multi-input allowed
-- [ ] Integration test confirms multiple edges to same input when flag ON
+- [ ] Unit tests verify multiple edges can connect to same input
+- [ ] Integration test confirms multiple edges to same input work correctly
 - [ ] No edge cases cause errors (e.g., duplicate edges, self-loops)
 
 #### Technical Notes
@@ -260,7 +207,7 @@ export function validateCombineMode(
 
 **Status**: Not Started
 **Effort**: Medium (6-8 hours)
-**Dependencies**: P1: Conditionally Remove Single-Input Invariant, P2: Extract Combine Logic from Pass 7
+**Dependencies**: P1: Remove Single-Input Invariant, P2: Extract Combine Logic from Pass 7
 **Spec Reference**: ARCHITECTURE-PROPOSAL.md lines 36-40 • **STATUS Reference**: STATUS-2025-12-31-193238.md § "Compiler Pass Integration Points" lines 144-148
 
 #### Description
@@ -431,9 +378,7 @@ function validateCombineMode(
 ```
 P0: Add combineMode to Slot Interface
   ↓
-P1: Feature Flag for Multi-Input Support
-  ↓
-P1: Conditionally Remove Single-Input Invariant
+P1: Remove Single-Input Invariant
   ↓
 P2: Extract Combine Logic from Pass 7 (parallel)
   ↓
@@ -446,7 +391,7 @@ P3: Add Combine Mode Validation
 - P2 "Extract Combine Logic" can proceed independently
 - P0 and P1 can proceed in parallel
 
-**Critical path**: P0 → P1 → P1 → P2 → P2 (total ~18 hours)
+**Critical path**: P0 → P1 → P2 → P2 (total ~14 hours)
 
 ---
 
