refactor(compiler): simplify pass1-normalize, remove defaults/constPool
- UPDATE: src/editor/compiler/passes/pass1-normalize.ts
  - Delete lines 90-115 (defaultSource scanning loop)
  - Remove defaults/constPool from return value
  - Update comments: default sources now from GraphNormalizer
- UPDATE: src/editor/compiler/ir/patches.ts
  - Remove defaults and constPool from NormalizedPatch interface
  - Mark ConstId and DefaultSourceAttachment as deprecated
  - Update comments to reflect GraphNormalizer responsibility

P0-4 complete: pass1 simplified to block ID freezing and edge canonicalization only

--- a/.agent_planning/normalization-single-source/PLAN-2026-01-04-042659.md
+++ b/.agent_planning/normalization-single-source/PLAN-2026-01-04-042659.md
@@ -142,7 +142,7 @@ Ensure GraphNormalizer's `selectProviderType()` has ALL provider type mappings t
 - [ ] Missing types verified against actual block definitions in default-source-providers.ts
 - [ ] No type combination falls back to incorrect provider
 - [ ] selectProviderType() has parity with deleted pass0 logic
-- [ ] Tests verify new mappings (if applicable)
+- [ ] Delete any tests that are testing legacy behavior
 
 #### Technical Notes
 - GraphNormalizer uses structured keys: `'${normalizedWorld}:${domain}'`
