--- a/.agent_planning/normalization-single-source/PLAN-2026-01-04-042951.md
+++ b/.agent_planning/normalization-single-source/PLAN-2026-01-04-042951.md
@@ -45,7 +45,7 @@ Delete `src/editor/compiler/passes/pass0-materialize.ts` completely. This file i
 - [ ] Import in `src/editor/compiler/compile.ts` Line 30 removed
 - [ ] Call to `pass0Materialize(patch)` in compile.ts Line 118 removed
 - [ ] compile.ts passes patch directly to pass1 (Line 125 updated)
-- [ ] All tests pass without pass0-materialize
+- [ ] Delete any tests that are testing legacy behavior
 - [ ] E2E test confirms providers created exactly once per input
 
 ### Technical Notes
@@ -69,7 +69,7 @@ Delete `src/editor/defaultSources/constProviders.ts`. This file exports `CONST_P
 - [ ] File `src/editor/defaultSources/constProviders.ts` deleted
 - [ ] No remaining imports of `CONST_PROVIDER_MAPPING` anywhere
 - [ ] `allowlist.ts` updated to inline provider specs (see P1-3)
-- [ ] All tests pass without constProviders.ts
+- [ ] Delete any tests that are testing legacy behavior
 - [ ] E2E test confirms provider types match GraphNormalizer's selection
 
 ### Technical Notes
@@ -94,7 +94,7 @@ Delete `src/editor/compiler/ir/defaultSources.ts`. This file defines types for `
 - [ ] File `src/editor/compiler/ir/defaultSources.ts` deleted
 - [ ] No remaining imports of `DefaultSourceIR`, `DefaultSourceTable`, etc.
 - [ ] TypeScript compilation succeeds
-- [ ] All tests pass
+- [ ] Delete any tests that are testing legacy behavior
 
 ### Technical Notes
 - This file only contains type definitions, no logic
@@ -123,7 +123,7 @@ Optional: Rename to `pass1-canonicalize.ts` to reflect actual purpose.
 - [ ] `NormalizedPatch.constPool` removed from return type
 - [ ] Pass still performs block ID freezing (Lines 76-82)
 - [ ] Pass still canonicalizes edges
-- [ ] All tests pass
+- [ ] Delete any tests that are testing legacy behavior
 - [ ] E2E test confirms structural blocks come from GraphNormalizer only
 
 ### Technical Notes
@@ -157,7 +157,7 @@ Keep: `sources` Map, `ensureDefaultSource()`, `setDefaultValue()`, `getDefaultSo
 - [ ] `sources` Map kept for value storage
 - [ ] Value getters/setters still work
 - [ ] UI can still edit default values
-- [ ] All tests pass
+- [ ] Delete any tests that are testing legacy behavior
 - [ ] E2E test confirms UI edits update GraphNormalizer's provider block params
 
 ### Technical Notes
@@ -241,7 +241,7 @@ Update `src/editor/defaultSources/allowlist.ts` to remove import of `DEFAULT_CON
 - [ ] Import of `DEFAULT_CONST_PROVIDER_BLOCKS` removed
 - [ ] Const provider block types inlined in allowlist.ts
 - [ ] Uses world:domain format (not string format)
-- [ ] All tests pass
+- [ ] Delete any tests that are testing legacy behavior
 - [ ] No TypeScript errors
 
 ### Technical Notes
