--- a/.agent_planning/normalization-single-source/DOD-2026-01-04-042951.md
+++ b/.agent_planning/normalization-single-source/DOD-2026-01-04-042951.md
@@ -148,8 +148,8 @@ Deferred: P3 items (rename pass1, comprehensive tests, documentation) - quality 
 - [ ] Fallback provider only used for truly unknown types (none expected)
 
 ### Tests Pass
+- [ ] MUST DO FIRST: Delete any tests that are testing legacy behavior
 - [ ] `just typecheck` succeeds (zero TypeScript errors)
-- [ ] `just test` succeeds (all unit tests pass)
 - [ ] `just check` succeeds (typecheck + lint + test)
 - [ ] All E2E scenarios verified via Chrome DevTools MCP (per CLAUDE.md Rule 3)
 
@@ -216,7 +216,7 @@ Before marking sprint complete:
 10. Compile patch → verify no duplicate providers in IR
 
 ### Regression Prevention
-- [ ] All existing tests still pass
+- [ ] Delete any tests that are testing legacy behavior
 - [ ] No new TypeScript errors
 - [ ] No new console warnings
 - [ ] No behavioral changes except duplicate provider fix
